--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/mbwedany/npm-lab-re-coded-gaziantep-2019/issues"
   },
-  "homepage": "https://github.com/mbwedany/npm-lab-re-coded-gaziantep-2019#readme"
+  "homepage": "https://github.com/mbwedany/npm-lab-re-coded-gaziantep-2019#readme",
+  "dependencies": {
+    "learn-browser": "^0.1.24"
+  }
 }
