--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "directories": {
     "test": "test"
   },
-"scripts": {
-  "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
-},
+  "scripts": {
+    "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mbwedany/npm-lab-re-coded-gaziantep-2019.git"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mbwedany/npm-lab-re-coded-gaziantep-2019#readme",
   "dependencies": {
-    "learn-browser": "^0.1.24"
+    "learn-browser": "^0.1.24",
+    "moment": "^2.24.0"
   }
 }
